2001-08-20  Martin Baulig  <baulig@suse.de>

	* Makefile.am, bonobo-config-ditem.c: Disable dmalloc again. Hmm, for the
	moment it seems to work - let's see how long this lasts.

2001-08-20  Martin Baulig  <baulig@suse.de>

	* Makefile.am: Compile and install bonobo-moniker-ditem.

	* bonobo-moniker-ditem.c: Make this a stand-alone server, not a shared
	library.

	* Bonobo_Moniker_ditem.server.in.in: Renamed from Bonobo_Moniker_ditem.oaf.in.

	* bonobo-config-ditem.[ch]: Require dmalloc.

2001-08-20  Martin Baulig  <baulig@suse.de>

	* gnome-desktop-item.c (GnomeDesktopItem): Added `name', `comment'
	and `attributes' hash tables; copy all the CORBA sequences into these
	hash tables to make the lookup faster.

	* gnome-desktop-item.h: Make all `GnomeDesktopItem *'s non-const.

2001-08-20  Martin Baulig  <baulig@suse.de>

	* gnome-desktop-i18n.[ch]: New files. This is a mixture of the old
	gnome-libs/libgnome/gnome-i18n.c and gettext-0.10.38/intl/localealias.c.

	* locale.alias: New file. From gettext-0.10.38.

	* Makefile.am: Install locale.alias in $(datadir)/gnome.

2001-08-20  Martin Baulig  <baulig@suse.de>

	* bonobo-config-ditem.[ch]: Merge bonobo-config-ditem-internals.[ch]
	back into this file.

	* bonobo-config-ditem-internals.[ch]: Removed.

2001-08-20  Martin Baulig  <baulig@suse.de>

	* Makefile.am: For the moment, link test-ditem against dmalloc.
	I don't know what this is, but it crashes in malloc() without
	dmalloc, but I have dmalloc turned off .... :-(

	* gnome-desktop.xmldb: Removed, don't need this anymore.

2001-08-20  Martin Baulig  <baulig@suse.de>

	Rewrote the ditem code a bit, cleaned up its API and give the
	gnome-desktop-item.c code direct access to its internals.

	* bonobo-config-ditem-internals.[ch]: New files.

	* bonobo-config-ditem.[ch]: Moved a few functions to the new
	bonobo-config-ditem-internals.[ch].

2001-08-18  Martin Baulig  <baulig@suse.de>

	* gnome-desktop-item.c (gnome_desktop_item_get_tryexec):
	New function.
